--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
+    <meta name="description"
+        content="Conexos tem as melhores ofertas de internet fibra para sua família ou empresa, entre em nosso site e saiba mais sobre nossos planos!">
 </head>
 
 <body>
@@ -17,14 +19,14 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
-                    <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" alt="Logo Conexos"
-                            class="logo-header"></a>
+                    <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" width="150"
+                            height="70" alt="Logo Conexos" class="logo-header"></a>
                     <nav>
                         <ul class="menu">
                             <li> <a href="index.html">Início</a> </li>
                             <li>
                                 <div class="dropdown">
-                                    <button class="btn btn-success dropdown-toggle" type="button"
+                                    <button class="btn btn-success dropdown-toggle .text-dark" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         Planos
                                     </button>
@@ -53,30 +55,36 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.png"
-                        alt="Modelo feminina com blusa verde apontando para texto a cima.">
+                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.png" width="576" height="400"
+                        alt="Modelo feminina com blusa verde apontando para texto ao lado direito: A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
                     <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.png"
-                        alt="Modelo femina com blusa verde apontando para texto ao lado direito.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.png"
-                        alt="Modelo feminina com blusa verde apontando para texto ao lado direito.">
-                </div>
-                
-                <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.png"
-                        alt="Texto acima e imagem de roteador abaixo.">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.png"
-                        alt="Texto ao lado esquerdo e uma imagem de roteador a direita.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.png"
-                        alt="Texto ao lado esquerdo e uma imagem de roteador a direita.">
+                        width="992" height="400"
+                        alt="Modelo femina com blusa verde apontando para texto ao lado direito: : A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.png" width="1920"
+                        height="700"
+                        alt="Modelo feminina com blusa verde apontando para texto ao lado direito: A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.png"
-                        alt="Texto a cima e abaixo 3 mulher e 2 homens em quadrados a direita.">
+                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.png" width="576" height="400"
+                        alt="Texto acima: Wi-fi que conecta toda sua casa  de graça! imagem de roteador ao centro e a baixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.png"
+                        width="992" height="400"
+                        alt="Texto ao lado esquerdo: Wi-fi que conecta toda sua casa  de graça! e uma imagem de roteador a direita e abaixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.png" width="1920"
+                        height="700"
+                        alt="Texto ao lado esquerdo: Wi-fi que conecta toda sua casa  de graça!  e uma imagem de roteador a direita e abaixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
+                </div>
+
+                <div class="carousel-item">
+                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.png" width="576" height="400"
+                        alt="Texto a cima: Reuniões com toda equipe sem travar! e abaixo 3 mulher e 2 homens em quadrados a direita.">
                     <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.png"
-                        alt="Texto a esquerda e 3 mulher e 2 homens em quadrados a direita.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.png"
-                        alt="Texto a esquerda e 3 mulher e 2 homens em quadrados a direita.">
+                        width="992" height="400"
+                        alt="Texto a esquerda: Reuniões com toda equipe sem travar! e 3 mulher e 2 homens em quadrados a direita.">
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.png" width="1920"
+                        height="700"
+                        alt="Texto a esquerda: Reuniões com toda equipe sem travar! e 3 mulher e 2 homens em quadrados a direita.">
                 </div>
 
             </div>
@@ -93,7 +101,8 @@
                         <div class="col-12 col-md-12 col-lg-3 pb-3">
                             <div class="card">
                                 <h5 class="card-title text-center my-2">Bronze</h5>
-                                <img src="./imagens/ilustra-planos/ilustra-1.svg"
+                                <img class="img-fluid" src="./imagens/ilustra-planos/ilustra-1.svg" width="690"
+                                    height="320"
                                     alt="Mulher de verde tocando ombro de duas crianças usando roupas verdes fazendo joinha.">
                                 <div class="card-body">
                                     <p class="card-texto">Plano ideal para espaços residenciais com pequenas
@@ -115,8 +124,8 @@
                         <div class="col-12 col-md-12 col-lg-3 pb-3">
                             <div class="card">
                                 <h5 class="card-title text-center my-2">Prata</h5>
-                                <img src="./imagens/ilustra-planos/ilustra-2.svg"
-                                    alt="Um time de duas mulheres e dois homens se comunicando.">
+                                <img class="img-fluid" src="./imagens/ilustra-planos/ilustra-2.svg" width="690"
+                                    height="320" alt="Um time de duas mulheres e dois homens se comunicando.">
                                 <div class="card-body">
                                     <p class="card-texto">Plano ideal para espaços residenciais com grandes
                                         famílias ou
@@ -138,8 +147,8 @@
                         <div class="col-12 col-md-12 col-lg-3 pb-3">
                             <div class="card">
                                 <h5 class="card-title text-center my-2">Ouro</h5>
-                                <img src="./imagens/ilustra-planos/ilustra-3.svg"
-                                    alt="Vários ambientes com várias pessoas trabalhando ao mesmo tempo.">
+                                <img class="img-fluid" src="./imagens/ilustra-planos/ilustra-3.svg" width="690"
+                                    height="320" alt="Vários ambientes com várias pessoas trabalhando ao mesmo tempo.">
                                 <div class="card-body">
                                     <p class="card-texto">Plano ideal para espaços empresariais de alta demanda
                                         que
@@ -170,13 +179,14 @@
                     <div class="col-12 col-md-12 col-lg-6">
 
                         <div class="img-status">
-                            <img class="img-fluid d-none d-xl-block"
+                            <img class="img-fluid d-none d-xl-block" width="360" height="240"
                                 src="./imagens/ilustra-planos/ilustra-status-lg.svg"
                                 alt="Mulher em pé verificando o celular com mensagen de texto.">
-                            <img class="img-fluid d-none d-md-block d-xl-none"
+                            <img class="img-fluid d-none d-md-block d-xl-none" width="696" height="240"
                                 src="./imagens/ilustra-planos/ilustra-status-md.svg"
                                 alt="Mulher em pé verificando o celular com mensagen de texto.">
-                            <img class="img-fluid d-md-none" src="./imagens/ilustra-planos/ilustra-status-sm.svg"
+                            <img class="img-fluid d-md-none" width="636" height="240"
+                                src="./imagens/ilustra-planos/ilustra-status-sm.svg"
                                 alt="Mulher em pé verificando o celular com mensagen de texto.">
                         </div>
 
@@ -201,27 +211,27 @@
 
     <footer class="text-left">
         <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
-          <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block" src="imagens/logos/conexos-logo-footer.png"
-            alt="Logo Conexos"></a>
+            <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
+                    src="imagens/logos/conexos-logo-footer.png" alt="Logo Conexos"></a>
 
             <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
                 escolha do cliente, com um sistema simples para solicitar.</p>
-         
-                <ul class="text-left">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="bronze.html">Bronze</a></li>
-            <li><a href="prata.html">Prata</a></li>
-            <li><a href="ouro.html">Ouro</a></li>
-            <li><a href="status.html">Status de solicitações</a></li>
-        </ul>
+
+            <ul class="text-left">
+                <li><a href="index.html">Início</a></li>
+                <li><a href="bronze.html">Bronze</a></li>
+                <li><a href="prata.html">Prata</a></li>
+                <li><a href="ouro.html">Ouro</a></li>
+                <li><a href="status.html">Status de solicitações</a></li>
+            </ul>
         </section>
 
         <div class="copyright">
-        <div class="p-3 text-center fs-small fw-lighter">
-            2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
+            <div class="p-3 text-center fs-small fw-lighter">
+                2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
+            </div>
         </div>
-    </div>
 
     </footer>
 
