--- a/index.html
+++ b/index.html
@@ -55,34 +55,34 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.png" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.webp" width="576" height="400"
                         alt="Modelo feminina com blusa verde apontando para texto ao lado direito: A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.png"
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.webp"
                         width="992" height="400"
                         alt="Modelo femina com blusa verde apontando para texto ao lado direito: : A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.png" width="1920"
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner1/banner1-desk.webp" width="1920"
                         height="700"
                         alt="Modelo feminina com blusa verde apontando para texto ao lado direito: A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.png" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.webp" width="576" height="400"
                         alt="Texto acima: Wi-fi que conecta toda sua casa  de graça! imagem de roteador ao centro e a baixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.png"
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.webp"
                         width="992" height="400"
                         alt="Texto ao lado esquerdo: Wi-fi que conecta toda sua casa  de graça! e uma imagem de roteador a direita e abaixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.png" width="1920"
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner2/banner2-desk.webp" width="1920"
                         height="700"
                         alt="Texto ao lado esquerdo: Wi-fi que conecta toda sua casa  de graça!  e uma imagem de roteador a direita e abaixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.png" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.webp" width="576" height="400"
                         alt="Texto a cima: Reuniões com toda equipe sem travar! e abaixo 3 mulher e 2 homens em quadrados a direita.">
-                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.png"
+                    <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.webp"
                         width="992" height="400"
                         alt="Texto a esquerda: Reuniões com toda equipe sem travar! e 3 mulher e 2 homens em quadrados a direita.">
-                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.png" width="1920"
+                    <img class="img-fluid d-none d-xl-block" src="./imagens/banner3/banner3-desk.webp" width="1920"
                         height="700"
                         alt="Texto a esquerda: Reuniões com toda equipe sem travar! e 3 mulher e 2 homens em quadrados a direita.">
                 </div>
