--- a/prata.html
+++ b/prata.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
+    <meta name="description"
+        content="Conexos tem as melhores ofertas de internet fibra para sua família ou empresa, entre em nosso site e saiba mais sobre nossos planos!">
 </head>
 
 <body>
@@ -52,25 +54,25 @@
         <div class="planos-main">
             <div class="info-planos">
                 <div class="row">
-                <h3 class="tittle my-5 col-12 col-md-12">Plano Prata</h3>
-                <p>Plano ideal para espaços residenciais com grandes
-                    famílias ou
-                    startups.</p>
-                <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima,
-                    podendo sofrer variações
-                    decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home
-                    válida até por 30 dias, a partir da data de instalação.</p>
-                <ul>
-                    <li>Internet fibra 400 mega</li>
-                    <li>Dowload até 400 Mbps</li>
-                    <li>Wi-fi grátis</li>
-                </ul>
-                <p class="text-left">R$ 200,00</p>
+                    <h3 class="tittle my-5 col-12 col-md-12">Plano Prata</h3>
+                    <p>Plano ideal para espaços residenciais com grandes
+                        famílias ou
+                        startups.</p>
+                    <p>A velocidade anunciada de acesso de tráfego na internet é nominal máxima,
+                        podendo sofrer variações
+                        decorrentes de fatores externos. Consulte a disponibilidade na sua localidade. Assistência Home
+                        válida até por 30 dias, a partir da data de instalação.</p>
+                    <ul>
+                        <li>Internet fibra 400 mega</li>
+                        <li>Dowload até 400 Mbps</li>
+                        <li>Wi-fi grátis</li>
+                    </ul>
+                    <p class="text-left">R$ 200,00</p>
+                </div>
             </div>
-        </div>
-        
-            <img class="img-fluid d-none d-md-none d-xl-block" src="./imagens/ilustra-planos/ilustra-2.svg" alt="Um time de duas mulheres e dois homens se comunicando." width="499px"
-                height="405px">
+
+            <img class="img-fluid d-none d-md-none d-xl-block" src="./imagens/ilustra-planos/ilustra-2.svg"
+                alt="Um time de duas mulheres e dois homens se comunicando." width="499px" height="405px">
 
         </div>
 
@@ -135,26 +137,26 @@
 
     <footer class="text-left">
         <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
-          <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block" src="imagens/logos/conexos-logo-footer.png"
-            alt="Logo Conexos"></a>
+            <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
+                    src="imagens/logos/conexos-logo-footer.png" alt="Logo Conexos"></a>
 
             <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
                 escolha do cliente, com um sistema simples para solicitar.</p>
-         
-                <ul class="text-left">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="bronze.html">Bronze</a></li>
-            <li><a href="ouro.html">Ouro</a></li>
-            <li><a href="status.html">Status de solicitações</a></li>
-        </ul>
+
+            <ul class="text-left">
+                <li><a href="index.html">Início</a></li>
+                <li><a href="bronze.html">Bronze</a></li>
+                <li><a href="ouro.html">Ouro</a></li>
+                <li><a href="status.html">Status de solicitações</a></li>
+            </ul>
         </section>
 
         <div class="copyright">
-        <div class="p-3 text-center fs-small fw-lighter">
-            2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
+            <div class="p-3 text-center fs-small fw-lighter">
+                2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
+            </div>
         </div>
-    </div>
 
     </footer>
 
