--- a/status.html
+++ b/status.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
+    <meta name="description"
+        content="Conexos tem as melhores ofertas de internet fibra para sua família ou empresa, entre em nosso site e saiba mais sobre nossos planos!">
 </head>
 
 <body>
@@ -50,52 +52,52 @@
         <div class="solicitaçao">
             <div class="row-lg column mx-0">
                 <div class="d-flex flex-column flex-lg-row justify-content-center">
-                <div class="col-12 col-md-12col-xl-9">
-                    <h2 class="title my-5">STATUS DE SOLICITAÇÕES</h2>
-                    <p> Contratou o serviço e gostaria de
-                        verificar o andamento?
-                        <br>
-                        Insira o código do pedido no formulário para ver o status<br>atualizado
-                    </p>
-                </div>
-                <div class="col-12 col-md-12 col-xl-3 align-items-center text-center my-5">
-                    <div class="card text-center mb-5" style="width: 19rem;">
-                        <div class="card-soli">
-                            <div class="card-body">
-                                <n3 class="card-title"><strong>código de verificação</strong></h3>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="btn btn-primary">verificar status</a>
+                    <div class="col-12 col-md-12col-xl-9">
+                        <h2 class="title my-5">STATUS DE SOLICITAÇÕES</h2>
+                        <p> Contratou o serviço e gostaria de
+                            verificar o andamento?
+                            <br>
+                            Insira o código do pedido no formulário para ver o status<br>atualizado
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-12 col-xl-3 align-items-center text-center my-5">
+                        <div class="card text-center mb-5" style="width: 19rem;">
+                            <div class="card-soli">
+                                <div class="card-body">
+                                    <n3 class="card-title"><strong>código de verificação</strong></h3>
+                                        <p class="card-text"></p>
+                                        <a href="#" class="btn btn-primary">verificar status</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
     </main>
 
     <footer class="text-left">
         <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
-          <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block" src="imagens/logos/conexos-logo-footer.png"
-            alt="Logo Conexos"></a>
+            <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
+                    src="imagens/logos/conexos-logo-footer.png" alt="Logo Conexos"></a>
 
             <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
                 escolha do cliente, com um sistema simples para solicitar.</p>
-         
-                <ul class="text-left">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="bronze.html">Bronze</a></li>
-            <li><a href="prata.html">Prata</a></li>
-            <li><a href="ouro.html">Ouro</a></li>
-        </ul>
+
+            <ul class="text-left">
+                <li><a href="index.html">Início</a></li>
+                <li><a href="bronze.html">Bronze</a></li>
+                <li><a href="prata.html">Prata</a></li>
+                <li><a href="ouro.html">Ouro</a></li>
+            </ul>
         </section>
 
         <div class="copyright">
-        <div class="p-3 text-center fs-small fw-lighter">
-            2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
+            <div class="p-3 text-center fs-small fw-lighter">
+                2023 <i class="bi bi-c-circle"></i> Projeto desenvolvido na academia Aprendiz Vivo Tech - Gama Academy
+            </div>
         </div>
-    </div>
 
     </footer>
 
