width e height nas imagens

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <footer class="text-left">
         <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
             <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
-                    src="imagens/logos/conexos-logo-footer.png" alt="Logo Conexos"></a>
+                    src="imagens/logos/conexos-logo-footer.png" width="149" height="108" alt="Logo Conexos"></a>
 
             <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
