--- a/ouro.html
+++ b/ouro.html
@@ -20,7 +20,8 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
-                    <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" alt="Logo Conexos"
+                    <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" width="150"
+                        height="70" alt="Logo Conexos"
                             class="logo-header"></a>
                     <nav>
                         <ul class="menu">
@@ -138,7 +139,7 @@
     <footer class="text-left">
         <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
             <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
-                    src="imagens/logos/conexos-logo-footer.png" alt="Logo Conexos"></a>
+                    src="imagens/logos/conexos-logo-footer.png" width="149" height="108" alt="Logo Conexos"></a>
 
             <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
